--- a/main.html
+++ b/main.html
@@ -7,6 +7,11 @@
 </head>
 
 <body>
+	<h1 id="heading">Hello,Welcome to JS</h1>
+	<input type="number" id="n1"><br>
+	<br><input type="number" id="n2"><br>
+	<br><button id="sum_btn">Calculate</button>
+	<div id="sum"></div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
