--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	<input type="number" id="n1"><br>
 	<br><input type="number" id="n2"><br>
 	<br><button id="sum_btn">Calculate</button>
-	<div id="sum"></div>
+	<div id="Sum"></div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
